# X-ComfyUI-FluxAgent

./: .gitignore  CHATBOT_README.md  CONTRIBUTION_TERM.md  PROJECT_STRUCTURE.md  PROJECT_STRUCTURE_zh_CN.md  README.md  README_zh_CN.md  __init__.py  pyproject.toml  test_chatbot.py
.github/workflows/: publish.yml
docs/: ai-function-design.md
fluxagent/: AICodeGenNode.py  ChatBotService.py  OpenaiChatNode.py  README.md  RichTextNode.py
fluxagent/utils/: AnyType.py  HotReload.py
js/: AICodeGenNode.js  RichTextNode.js  RichTextWidget.js  codemirror_bundle.js
js/fluxagent/: AICodeGenNode.js  ChatBotTab.js  README.md  RichTextNode.js  RichTextWidget.js
js/user/: README.md
libs/codemirror/: READEME.md  package-lock.json  package.json
libs/codemirror/src/: index.js
nodes/: AICodeGenNode.py  ClaudeChatNode.py  HotReload.py  OpenaiChatNode.py  RichText.py  RichTextNode.py  SaveTextNode.py
prompts/: README.md  chatbotnode.md  magic.md
research/: README.md
research/web-video-creator/: README.md  prompt.md
research/web-video-creator/backend/: .env.example  app.py  requirements.txt  setup.sh
research/web-video-creator/backend/services/: openai_service.py  scene_processor.py  video_creator.py
research/web-video-creator/frontend/: index.html
test/: README.md
user/: README.md
